--- a/styles.css
+++ b/styles.css
@@ -1,71 +1,98 @@
 body {
-    margin: 0;
-    padding: 0;
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
+    margin: 0;
+    padding: 0;
     font-family: Roboto;
-    
+}
+
+.hero {
+    display: flex;
+    flex-direction: column;
+    background-color: #1f2937;
 }
 
 .header {
-
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 350px;
-    background-color: #1F2937;
+    align-items: center;
+    gap: 600px;
 }
 
-.logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.h1 {
     font-size: 24px;
     color: #f9faf8;
 }
 
-.nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.header-a, .p-hero {
     font-size: 18px;
     color: #e5e7eb;
 }
 
-ul, li {
+ul {
+    display: flex;
+    gap: 10px;
+}
+
+li, a {
+    list-style: none;
+    text-decoration: none;
+}
+
+.hero-section {
     display: flex;
     flex-direction: row;
-    gap: 10px;
-    /*list-style: none;*/
+    justify-content: center;
+    padding: 30px;
+    gap: 40px;
 }
 
-/*.body-container {
+.left-hero {
     display: flex;
     flex-direction: column;
-    border: 5px solid black;
+    width: 300px;
 }
 
-.section-one {
-    display: flex;
+.h2 {
+    font-size: 48px;
+    font-weight: 900;
+    color: #f9faf8;
 }
 
-
-.section-two {
-    display: flex;
+.button-header {
+    width: 100px;
 }
 
-.section-three {
+.img-header {
+    width: 450px;
+    height: 325px;
+}
+/*
+.cards {
     display: flex;
-    background-color: lightcoral;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.section-four {
-    display: flex;
-    background-color: lightgreen;
+.card-h2 {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
 }
 
-.section-five {
+.img-cards {
     display: flex;
-    background-color: lightskyblue;
-}*/
+    gap: 30px;
+    justify-content: center;
+    
+}
+
+.img-card {
+    outline: solid #3882f6;
+    width: 200px;
+    height: 200px;
+    border-radius: 10px;
+}
+    */
