--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,20 @@
+/*Todo el código comentado 
+hace parte de la primera elaboración de la landing page*/
+
+/*
 body {
     display: flex;
+    flex: 1;
     flex-direction: column;
     margin: 0;
-    padding: 0;
     font-family: Roboto;
+    height: 100vh;
+}
+
+.body {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
 
 .hero {
@@ -46,6 +57,7 @@ li, a {
     justify-content: center;
     padding: 30px;
     gap: 40px;
+    flex-wrap: wrap;
 }
 
 .left-hero {
@@ -61,16 +73,27 @@ li, a {
 }
 
 .button-header {
+    color: #f9faf8;
+    background-color: #3882f6;
+    border: 2px solid #3882f6;
     width: 100px;
+    padding: 5px;
+    border-radius: 5px;
 }
 
 .img-header {
     width: 450px;
     height: 325px;
 }
-/*
+
+.container-card {
+    display: flex;
+    margin: 40px;
+}
+
 .cards {
     display: flex;
+    flex: 1;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -86,7 +109,7 @@ li, a {
     display: flex;
     gap: 30px;
     justify-content: center;
-    
+    flex-wrap: wrap; 
 }
 
 .img-card {
@@ -95,4 +118,81 @@ li, a {
     height: 200px;
     border-radius: 10px;
 }
-    */
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    background-color: #e5e7eb;
+    padding: 40px;
+}
+
+.p-quote{
+    display: flex;
+    justify-content: center;
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+    color: #1f2937;
+}
+
+.quote-cite {
+    display: flex;
+    justify-content: end;
+    font-size: 26px; 
+    padding-right: 15px;
+    padding-bottom: 10px;
+}
+
+.wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 200px;
+    margin: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 800px;
+    background-color: #3882f6;
+    border-radius: 6px;
+}
+
+
+.wrapper-text {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.wrapper-button {
+    display: flex;
+}
+
+.h2-wrapper {
+    margin-bottom: 0;
+    color:  #f9faf8;
+
+}
+
+.p-wrapper {
+    margin-top: 0;
+    color:  #e5e7eb;
+}
+
+.wrap-button {
+    color: #f9faf8;
+    background-color: #3882f6;
+    border: 2px solid #e5e7eb;
+    width: 100px;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    background-color: #1f2937;
+    color: #e5e7eb;
+
+}
+*/
