--- a/styles.css
+++ b/styles.css
@@ -196,3 +196,109 @@ footer {
 
 }
 */
+
+body {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    font-family: Roboto;
+  
+}
+
+/*Header & hero*/
+
+.hero {
+display: flex;
+flex: 1;
+flex-direction: column; 
+background-color: #1f2937;
+}
+
+.header {
+display: flex;
+flex-direction: row;
+align-items: center;
+gap: 600px;
+padding: 15px 30px;
+}
+
+.logo {
+margin-left: auto;
+font-size: 24px;
+color: #f9faf8;
+}
+
+.nav { 
+margin-right: auto;
+}
+
+ul, li, a {
+list-style: none;
+text-decoration: none;
+display: flex;
+flex-direction: row;
+font-size: 18px;
+color: #e5e7eb;
+gap: 20px;
+}
+
+a:hover {
+color: #3882f6;
+}
+
+.main-hero {
+display: flex;
+flex: 1;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+gap: 40px;
+padding: 32px 0;
+}
+
+.content {
+display: flex;
+flex-direction: column;
+justify-content: center;
+width: 600px;
+height: 400px;
+}
+
+.h2-hero {
+font-size: 48px;
+font-weight: 900;
+color: #f9faf8; 
+margin-bottom: 5px;
+}
+
+.p-hero {
+font-size: 18px;
+color: #e5e7eb;
+margin-top: 5px;
+}
+
+.b-hero, .b-wrapper {
+font-size: 18px;
+color: #f9faf8;
+background-color: #3882f6;
+border: none;
+border-radius: 6px;
+padding: 5px 30px;
+}
+
+.b-wrapper {
+outline: 2px solid #e5e7eb;
+}
+
+button:hover {
+background-color: #f9faf8;
+color: #1f2937;
+}
+
+.img-hero {
+/*outline: 2px solid beige;*/
+border-radius: 6px;
+width: 600px;
+height: 400px;
+}
