--- a/styles.css
+++ b/styles.css
@@ -302,3 +302,43 @@ border-radius: 6px;
 width: 600px;
 height: 400px;
 }
+
+/*Card Section*/
+
+.card { 
+    display: flex;
+    flex-direction: column;
+    padding: 64px;
+}
+
+.h2-card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 20px;
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+}
+
+.cards-text {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 50px;
+    flex-wrap: wrap;
+    font-size: 18px;
+}
+
+.img-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.img {
+    width: 200px;
+    height: 200px;
+    /*outline: 3px solid #3882f6;*/
+    border-radius: 6px;
+}
