--- a/styles.css
+++ b/styles.css
@@ -407,3 +407,17 @@ height: 400px;
 .button-warapper {
  padding: 15px;
  }
+
+/*Footer*/
+
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 600px;
+    padding: 20px 32px;
+    background-color: #1f2937;
+    color: #f9faf8;
+}
+
